# cloudweisz-gear-academy

./: .gitignore  Cargo.toml  build.rs  publish.md  template.txt  test.text
.github/workflows/: ci.yml
coin-io/: Cargo.toml
coin-io/src/: lib.rs
coin-state/: Cargo.toml
coin-state/src/: lib.rs
curve-io/: Cargo.toml
curve-io/src/: lib.rs
io/src/: lib.rs
pump-coin/: Cargo.toml  build.rs
pump-coin/src/: lib.rs  tests.rs
pump-curve/: Cargo.toml
pump-curve/src/: lib.rs
session/: Cargo.toml
session-io/: Cargo.toml
session-io/src/: lib.rs
session/src/: lib.rs
session/tests/: tests.rs
src/: lib.rs
state/: Cargo.toml
wordle/: Cargo.toml
wordle-io/: Cargo.toml
wordle-io/src/: lib.rs
wordle/src/: lib.rs
wordle/tests/: tests.rs
