[workspace.package]
homepage = "https://wiki.gear-tech.io/docs/examples/prerequisites"
authors = ["Gear Foundation <hello@gear.foundation>"]
version = "0.1.0"
license = "MIT"
edition = "2021"
publish = false

# It's necessary to include all metawasm crates in the workspace section, otherwise they'll be
# ignored by Cargo and won't be built.
[workspace]
members = ["session","wordle", "pump-coin","state"]

[workspace.dependencies]
gstd = "1.4.2"
gmeta = "1.4.2"
gear-wasm-builder = "1.4.2"
gtest = "1.4.2"
gclient = "1.4.2"
wordle-io.path = "wordle-io"
session-io.path = "session-io"
coin-io.path = "coin-io"
tokio = "1"
xshell = "0.2"
anyhow = "1"
parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }
