[package]
name = "session"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
gstd.workspace = true
template-io.workspace = true

[build-dependencies]
gear-wasm-builder.workspace = true
template-io.workspace = true

[dev-dependencies]
gtest.workspace = true
gclient.workspace = true
tokio.workspace = true
