[package]
name = "fungible-token-state"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
coin-io.workspace = true
gstd.workspace = true
gmeta = { workspace = true, features = ["codegen"] }

[build-dependencies]
gear-wasm-builder = { workspace = true, features = ["metawasm"] }
